# ClickShack

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  Justfile  LICENSE  MODULE.bazel  NOTICE  README.md  hatch_build.py  pyproject.toml
.claude/skills/clickhouse-source-porter/: SKILL.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-build-baseline-recovery/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-parser-workload-coverage/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/02.1-select-language-feature-completeness/: 02.1-01-PLAN.md  02.1-01-SUMMARY.md  02.1-02-PLAN.md  02.1-02-SUMMARY.md  02.1-03-PLAN.md  02.1-03-SUMMARY.md  02.1-CONTEXT.md  02.1-RESEARCH.md  02.1-VALIDATION.md  02.1-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
clickshack/: __init__.py
clickshack/ir/: adapter.py  models.py  parser.py
clickshack/linter/: base.py
docs/: README.md  deps.md  parser_workload_reconciliation.md  parser_workload_scope.md  ported_clickhouse_manifest.md  select_dialect_missing_features.md  select_parser_roadmap.md
docs/superpowers/plans/: 2026-03-14-select-dialect-ir-v1.md  2026-03-15-ci-pipeline.md  2026-03-15-python-wheel-binary-distribution.md
docs/superpowers/specs/: 2026-03-14-select-parsing-ir-v1-design.md  2026-03-15-ci-design.md  2026-03-15-python-wheel-binary-distribution-design.md
examples/bootstrap/: BUILD.bazel  core.cc  core.h  deps_probe.cc  ir_dump.cc  main.cc  parser_workload_summary.cc  select_from_lite_smoke.cc  select_lite_smoke.cc  select_rich_smoke.cc  use_parser_smoke.cc
ir/: BUILD.bazel  IRSerializer.cpp  IRSerializer.h
ported_clickhouse/: BUILD.bazel  LICENSE
ported_clickhouse/base/: BUILD.bazel  defines.h  find_symbols.h  types.h
ported_clickhouse/common/: BUILD.bazel  ErrorCodes.cpp  ErrorCodes.h  Exception.h  StringUtils.h  UTF8Helpers.h  checkStackSize.h
ported_clickhouse/core/: BUILD.bazel  Defines.h
ported_clickhouse/parsers/: ASTExpressionList.cpp  ASTExpressionList.h  ASTExpressionOpsLite.cpp  ASTExpressionOpsLite.h  ASTFunction.cpp  ASTFunction.h  ASTIdentifier.cpp  ASTIdentifier.h  ASTIdentifier_fwd.h  ASTJoinLite.cpp  ASTJoinLite.h  ASTLimitByLite.cpp  ASTLimitByLite.h  ASTLimitLite.cpp  ASTLimitLite.h  ASTLiteral.cpp  ASTLiteral.h  ASTOrderByElementLite.cpp  ASTOrderByElementLite.h  ASTOrderByListLite.cpp  ASTOrderByListLite.h  ASTSelectFromLiteQuery.h  ASTSelectLiteQuery.h  ASTSelectRichQuery.cpp  ASTSelectRichQuery.h  ASTSelectRichQuery_fwd.h  ASTSelectSetLite.cpp  ASTSelectSetLite.h  ASTTableAliasLite.cpp  ASTTableAliasLite.h  ASTTableExprLite.cpp  ASTTableExprLite.h  ASTTableFunctionLite.cpp  ASTTableFunctionLite.h  ASTTableIdentifierLite.cpp  ASTTableIdentifierLite.h  ASTUseQuery.h  ASTWindowDefinitionLite.cpp  ASTWindowDefinitionLite.h  ASTWindowListLite.cpp  (+35 more)
testdata/parser_workload/: manifest.json  prioritized_internal_workload.json
testdata/parser_workload/excluded/: p0_insert_statement.sql  p0_mssql_bracket_identifier.sql  p0_mssql_nolock_hint.sql  p0_mssql_top.sql  p1_parenthesized_table_expr.sql  p1_query_parameter.sql
testdata/parser_workload/supported/: p0_distinct_on.sql  p0_distinct_where_order_limit.sql  p0_inner_join_on.sql  p0_top_with_ties.sql  p0_with_cte.sql  p0_with_recursive_select_all.sql  p1_case_over_inline.sql  p1_fetch_expr.sql  p1_group_rollup_having.sql  p1_grouping_sets.sql  p1_limit_by_all.sql  p1_limit_expr_offset.sql  p1_local_join_on.sql  p1_null_literal.sql  p1_order_by_all.sql  p1_order_modifiers.sql  p1_over_named_window.sql  p1_paste_join.sql  p1_union_settings_format.sql
tests/: test_adapter.py  test_ir_models.py  test_linter.py  test_parser.py
tools/: cc_no_lld.sh  check_tmp_boundary.sh  clang_sanitize_fuse_ld.sh  parser_smoke_suite.sh  parser_workload_suite.sh
