module(
    name = "clickshack",
    version = "0.1.0",
)

bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "abseil_cpp")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "fmt", version = "11.2.0", repo_name = "fmt")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1", repo_name = "re2")
bazel_dep(name = "double-conversion", version = "3.3.1", repo_name = "double_conversion")
bazel_dep(name = "magic_enum", version = "0.9.7", repo_name = "magic_enum")
bazel_dep(name = "openssl", version = "3.5.5.bcr.0", repo_name = "openssl")
bazel_dep(name = "boost", version = "1.89.0.bcr.4", repo_name = "boost")
bazel_dep(name = "boost.config", version = "1.89.0.bcr.2", repo_name = "boost_config")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1", repo_name = "nlohmann_json")
