[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickshack"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sqlglot>=25.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "pyright>=1.1", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["clickshack"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle errors, pyflakes, isort, pyupgrade

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
