[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickshack"
version = "0.1.0"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "sqlglot>=25.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "pyright>=1.1", "ruff>=0.4", "build>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["clickshack"]

[tool.hatch.build.hooks.custom]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle errors, pyflakes, isort, pyupgrade

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET = "11.0"}
