[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickshack"
version = "0.1.1"
description = "Parse and explore ClickHouse SQL queries"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dorran Howell", email = "dorranh@appalachian.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "sqlglot>=25.0",
]

[project.urls]
Homepage = "https://github.com/dorranh/ClickShack"
Repository = "https://github.com/dorranh/ClickShack"

[dependency-groups]
dev = ["pytest>=8.0", "pyright>=1.1", "ruff>=0.4", "build>=1.0"]

[tool.hatch.build.targets.wheel]
packages = ["clickshack"]

[tool.hatch.build.hooks.custom]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle errors, pyflakes, isort, pyupgrade

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"
repair-wheel-command = "auditwheel repair --exclude libpthread.so.0 --exclude libc.so.6 --exclude libm.so.6 --exclude libdl.so.2 --exclude librt.so.1 -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
environment = {MACOSX_DEPLOYMENT_TARGET = "14.5"}
