load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "core",
    hdrs = ["core.h"],
    srcs = ["core.cc"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "hello_clickshack",
    srcs = ["main.cc"],
    deps = [":core"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "deps_probe",
    srcs = ["deps_probe.cc"],
    deps = [
        "@abseil_cpp//absl/strings",
        "@boost_config//:boost.config",
        "@double_conversion//:double-conversion",
        "@fmt//:fmt",
        "@magic_enum//:magic_enum",
        "@openssl//:crypto",
        "@re2//:re2",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "use_parser_smoke",
    srcs = ["use_parser_smoke.cc"],
    deps = [
        "//ported_clickhouse:parser_use_stack",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "select_lite_smoke",
    srcs = ["select_lite_smoke.cc"],
    deps = [
        "//ported_clickhouse:parser_select_lite_stack",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "select_from_lite_smoke",
    srcs = ["select_from_lite_smoke.cc"],
    deps = [
        "//ported_clickhouse:parser_select_from_lite_stack",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "select_rich_smoke",
    srcs = ["select_rich_smoke.cc"],
    deps = [
        "//ported_clickhouse:parser_select_rich_stack",
    ],
    visibility = ["//visibility:public"],
)
