cc_library(
    name = "parser_core",
    srcs = [
        "IParser.cpp",
        "IParserBase.cpp",
        "Lexer.cpp",
        "TokenIterator.cpp",
    ],
    hdrs = [
        "IAST_fwd.h",
        "IParser.h",
        "IParserBase.h",
        "Lexer.h",
        "LexerStandalone.h",
        "LiteralTokenInfo.h",
        "TokenIterator.h",
        "clickhouse_lexer.h",
    ],
    deps = [
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
        "@abseil_cpp//absl/container:flat_hash_map",
        "@abseil_cpp//absl/container:inlined_vector",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parser_use_stack",
    srcs = [
        "ASTIdentifier.cpp",
        "CommonParsers.cpp",
        "ExpressionElementParsers.cpp",
        "IAST.cpp",
        "ParserUseQuery.cpp",
    ],
    hdrs = [
        "ASTIdentifier.h",
        "ASTIdentifier_fwd.h",
        "ASTUseQuery.h",
        "CommonParsers.h",
        "ExpressionElementParsers.h",
        "IAST.h",
        "ParserUseQuery.h",
    ],
    deps = [
        ":parser_core",
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parser_select_lite_stack",
    srcs = [
        "ASTExpressionList.cpp",
        "ASTFunction.cpp",
        "ASTLiteral.cpp",
        "ExpressionLiteParsers.cpp",
        "ParserSelectLiteQuery.cpp",
    ],
    hdrs = [
        "ASTExpressionList.h",
        "ASTFunction.h",
        "ASTLiteral.h",
        "ASTSelectLiteQuery.h",
        "ExpressionLiteParsers.h",
        "ParserSelectLiteQuery.h",
    ],
    deps = [
        ":parser_use_stack",
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
    ],
    visibility = ["//visibility:public"],
)
