load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "parser_core",
    srcs = [
        "IParser.cpp",
        "IParserBase.cpp",
        "Lexer.cpp",
        "TokenIterator.cpp",
    ],
    hdrs = [
        "IAST_fwd.h",
        "IParser.h",
        "IParserBase.h",
        "Lexer.h",
        "LexerStandalone.h",
        "LiteralTokenInfo.h",
        "TokenIterator.h",
        "clickhouse_lexer.h",
    ],
    deps = [
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
        "@abseil_cpp//absl/container:flat_hash_map",
        "@abseil_cpp//absl/container:inlined_vector",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parser_use_stack",
    srcs = [
        "ASTIdentifier.cpp",
        "CommonParsers.cpp",
        "ExpressionElementParsers.cpp",
        "IAST.cpp",
        "ParserUseQuery.cpp",
    ],
    hdrs = [
        "ASTIdentifier.h",
        "ASTIdentifier_fwd.h",
        "ASTUseQuery.h",
        "CommonParsers.h",
        "ExpressionElementParsers.h",
        "IAST.h",
        "ParserUseQuery.h",
    ],
    deps = [
        ":parser_core",
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parser_select_lite_stack",
    srcs = [
        "ASTExpressionList.cpp",
        "ASTFunction.cpp",
        "ASTLiteral.cpp",
        "ExpressionLiteParsers.cpp",
        "ParserSelectLiteQuery.cpp",
    ],
    hdrs = [
        "ASTExpressionList.h",
        "ASTFunction.h",
        "ASTLiteral.h",
        "ASTSelectLiteQuery.h",
        "ExpressionLiteParsers.h",
        "ParserSelectLiteQuery.h",
    ],
    deps = [
        ":parser_use_stack",
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parser_select_from_lite_stack",
    srcs = [
        "ASTTableIdentifierLite.cpp",
        "ParserSelectFromLiteQuery.cpp",
        "TableExpressionLiteParsers.cpp",
    ],
    hdrs = [
        "ASTSelectFromLiteQuery.h",
        "ASTTableIdentifierLite.h",
        "ParserSelectFromLiteQuery.h",
        "TableExpressionLiteParsers.h",
    ],
    deps = [
        ":parser_select_lite_stack",
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "expression_ops_lite_stack",
    srcs = [
        "ASTExpressionOpsLite.cpp",
        "ExpressionOpsLiteParsers.cpp",
    ],
    hdrs = [
        "ASTExpressionOpsLite.h",
        "ExpressionOpsLiteParsers.h",
    ],
    deps = [
        ":parser_select_lite_stack",
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parser_table_sources_stack",
    srcs = [
        "ASTJoinLite.cpp",
        "ASTTableAliasLite.cpp",
        "ASTTableExprLite.cpp",
        "ASTTableFunctionLite.cpp",
        "TableSourcesLiteParsers.cpp",
    ],
    hdrs = [
        "ASTSelectRichQuery_fwd.h",
        "ASTJoinLite.h",
        "ASTTableAliasLite.h",
        "ASTTableExprLite.h",
        "ASTTableFunctionLite.h",
        "TableSourcesLiteParsers.h",
    ],
    deps = [
        ":expression_ops_lite_stack",
        ":parser_select_from_lite_stack",
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parser_select_clauses_stack",
    srcs = [
        "ASTLimitByLite.cpp",
        "ASTLimitLite.cpp",
        "ASTOrderByElementLite.cpp",
        "ASTOrderByListLite.cpp",
        "ASTWindowDefinitionLite.cpp",
        "ASTWindowListLite.cpp",
        "SelectClausesLiteParsers.cpp",
    ],
    hdrs = [
        "ASTLimitByLite.h",
        "ASTLimitLite.h",
        "ASTOrderByElementLite.h",
        "ASTOrderByListLite.h",
        "ASTWindowDefinitionLite.h",
        "ASTWindowListLite.h",
        "SelectClausesLiteParsers.h",
    ],
    deps = [
        ":expression_ops_lite_stack",
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "parser_select_rich_stack",
    srcs = [
        "ASTSelectRichQuery.cpp",
        "ASTSelectSetLite.cpp",
        "ParserSelectRichQuery.cpp",
    ],
    hdrs = [
        "ASTSelectRichQuery.h",
        "ASTSelectRichQuery_fwd.h",
        "ASTSelectSetLite.h",
        "ParserSelectRichQuery.h",
    ],
    deps = [
        ":parser_select_clauses_stack",
        ":parser_table_sources_stack",
        "//ported_clickhouse/base:base_headers",
        "//ported_clickhouse/common:error_codes",
        "//ported_clickhouse/core:core_headers",
    ],
    visibility = ["//visibility:public"],
)
